[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tower_of_utils"  # The name you'll use to uninstall it
version = "0.1.0"
description = "Misc utils"
dependencies = [
    "pandas",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]